SWITCHYARD-2955 - second attempt (#627)
- removing the waitForJobsOld() method which is no longer used